@@ -5,7 +5,6 @@
 import os
 import sys
 import cPickle
-import locale
 
 from mnemosyne.libmnemosyne.translator import _
 from mnemosyne.libmnemosyne.component import Component
@@ -106,7 +105,7 @@ class Configuration(Component, dict):
              "memorise_sister_cards_on_same_day": False,
              "show_intervals": "never",
              "only_editable_when_answer_shown": False,
-             "ui_language": locale.getdefaultlocale()[0][:2],
+             "ui_language": None,
              "backups_to_keep": 10,
              "backup_before_sync": True,
              "check_for_edited_local_media_files": True,
